--- a/document/adversarial_cooperation.tex
+++ b/document/adversarial_cooperation.tex
@@ -17,6 +17,7 @@
 
 \mainmatter
 \include{content/introduction}
+\include{content/hash_functions/hash_functions}
 
 \backmatter
 \include{content/appendix}
