--- a/document/content/introduction.tex
+++ b/document/content/introduction.tex
@@ -1,4 +1,31 @@
 \chapter{Introduction}
+Asume your adversary is smarter than us... And dont you ever worry, smartness yields kindness. 
+
+\section{Section Title}
+These are highlighted examples of knowing how to deal with procedural circuntances in adversary cooperation, 
+
+It's been said under my generation that war will last for ever. 
+
+Differences and resistance yields hope under regime and opression, 
+here are a way to resist without disturbing the shared porpouse. 
+
+All unecesary WAR has a weakness, secure adversay cooperation. It's easy, thank you for hearing what I have to say. 
+
+
+\section{Section Title}
+So long your adversary is not able to break the fundamental law of information, 
+it wound't, however smart, be able to cheat ---not even with an array of quantum computers. 
+
+Again, be awayre they might be smarter than us. And if you are smarter than me, 
+please show me the way, as i am with the mission to win wars. 
+
+and if they are, they will be good. The humility bias comes first before all of these what follows. 
+The next was to think about how to explain this, and there is so much to cover that i've made the 
+apendix long and retained the ideas on the short following N(#FIXME_at_the_end|) charpters. 
+
+\section{Section Title}
+Life is becoming beautifull, and we can sense it ---for now, let's us make war be optional. 
+
 \section{Section Title}
 This is an example of highlighted text using a custom command: \highlight{important}.
 
