--- a/document/content/adversario_sibi_perfidiam_revelare/adversario_sibi_perfidiam_revelare.tex
+++ b/document/content/adversario_sibi_perfidiam_revelare/adversario_sibi_perfidiam_revelare.tex
@@ -1,2 +1,4 @@
 
 Tell an adversary it is wrong from it's secret information, without having it revealing it secret information. 
+
+How to tell an adversay it's making a mistake. 
