--- a/document/content/introduction.tex
+++ b/document/content/introduction.tex
@@ -1,7 +1,12 @@
 \chapter{Introduction}
-Asume your adversary is smarter than us... And dont you ever worry, smartness yields kindness. 
+Asume your adversary is smarter than us... Trust a failure, smartness yields kindness. 
+
 
 \section{Section Title}
+Phrofetical perpetual war needs to be teached the following deilussion. 
+
+The following secure formulations cant even be broken under Quantum computing, they are Informationally secure. 
+
 These are highlighted examples of knowing how to deal with procedural circuntances in adversary cooperation, 
 
 It's been said under my generation that war will last for ever. 
@@ -22,6 +27,9 @@ please show me the way, as i am with the mission to win wars.
 and if they are, they will be good. The humility bias comes first before all of these what follows. 
 The next was to think about how to explain this, and there is so much to cover that i've made the 
 apendix long and retained the ideas on the short following N(#FIXME_at_the_end|) charpters. 
+
+\section{The ovious lying adversary}
+Zero knowledge proofs and non repudiation are used to avoid you and your adversary to lie. 
 
 \section{Section Title}
 Life is becoming beautifull, and we can sense it ---for now, let's us make war be optional. 
