--- a/document/content/introduction.tex
+++ b/document/content/introduction.tex
@@ -2,6 +2,8 @@
 Asume your adversary is smarter than us... Trust a failure, smartness yields kindness. 
 
 
+Here an Adversary is willing to cooperate, and Enemy wont and will try against both parties. 
+
 \section{Section Title}
 Phrofetical perpetual war needs to be teached the following deilussion. 
 
